# wallter

./: .gitattributes  .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MILESTONES.md  README.md  ROADMAP.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: consts.rs  error.rs  lib.rs  main.rs
src/api/: default.rs  mod.rs  wallhaven copy.rs  wallhaven.rs
src/cli/: handler.rs
src/config/: default.rs  mod.rs
src/config/api/: default.rs  mod.rs  source.rs  wallhaven.rs
src/config/color/: default.rs  mod.rs  mode.rs
src/config/color/mode/: default.rs  linux.rs  mod.rs  windows.rs
src/config/color/mode/linux/: default.rs  mod.rs
src/config/color/mode/windows/: default.rs  mod.rs  nightlight.rs
src/config/monitor/: default copy.rs  default.rs  mod.rs  orientation.rs  position.rs  resolution.rs  size.rs
src/config/path/: default.rs  mod.rs  types.rs
src/config/search/: default.rs  mod.rs  source.rs  wallhaven.rs
src/config/slideshow/: default.rs
src/error/: default.rs  mod.rs
src/utils/: mod.rs  parse.rs  print.rs  registry.rs
