[package]
name = "wallter"
version = "0.1.0"
edition = "2024"
authors = ["Craig 'craole' Cole <cc@craole.com>"]
description = "A modular wallpaper management utility"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = 1 }

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
dark-light = "2.0.0"
directories = "6.0.0"
image = "0.25.6"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
winit = "0.30.11"
